--- a/right3.html
+++ b/right3.html
@@ -1,46 +1,46 @@
 <html><head>
-<title>¿À¸¥ÂÊ2ÆäÀÌÁö
+<title>ì˜¤ë¥¸ìª½2íŽ˜ì´ì§€
 </title></head>
 <body>
 <table border=1>
 <tr>
 <td>
-<img src=±³°ú¸ñ°³¿ä1.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EA%B5%90%EA%B3%BC%EB%AA%A9%EA%B0%9C%EC%9A%941.png?raw=true>
 </tr>
 </td>
 <tr>
 <td>
-<img src=±³°ú¸ñ°³¿ä2.png>
+<img src=êµê³¼ëª©ê°œìš”2.png>
 </tr>
 </td>
 <tr>
 <td>
-<img src=±³°ú¸ñ°³¿ä3.png>
+<img src=êµê³¼ëª©ê°œìš”3.png>
 </tr>
 </td>
 <tr>
 <td>
-<img src=±³°ú¸ñ°³¿ä4.png>
+<img src=êµê³¼ëª©ê°œìš”4.png>
 </tr>
 </td>
 <tr>
 <td>
-<img src=±³°ú¸ñ°³¿ä5.png>
+<img src=êµê³¼ëª©ê°œìš”5.png>
 </tr>
 </td>
 <tr>
 <td>
-<img src=±³°ú¸ñ°³¿ä6.png>
+<img src=êµê³¼ëª©ê°œìš”6.png>
 </tr>
 </td>
 <tr>
 <td>
-<img src=±³°ú¸ñ°³¿ä7.png>
+<img src=êµê³¼ëª©ê°œìš”7.png>
 </tr>
 </td>
 <tr>
 <td>
-<img src=±³°ú¸ñ°³¿ä8-1.png>
+<img src=êµê³¼ëª©ê°œìš”8-1.png>
 </tr>
 </td>
 </table>
