--- a/right1.html
+++ b/right1.html
@@ -1,9 +1,9 @@
 <html><head>
-<title>¿À¸¥ÂÊ1ÆäÀÌÁö
+<title>ì˜¤ë¥¸ìª½1íŽ˜ì´ì§€
 </title></head>
 <body>
 <table border=1>
-<img src=ÀÎÇÏ´ëÇÐ±³ÇÐ°ú¼Ò°³.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EC%9D%B8%ED%95%98%EB%8C%80%ED%95%99%EA%B5%90%ED%95%99%EA%B3%BC%EC%86%8C%EA%B0%9C.png?raw=true>
 
 </table>
 </body>
