--- a/right2.html
+++ b/right2.html
@@ -1,21 +1,21 @@
 <html><head>
-<title>©ю╦╔бй2фДюлаЖ
+<title>Л≤╓К╔╦Л╙╫2М▌≤Л²╢Л╖─
 </title></head>
 <body>
 <table border=1>
 <tr>
 <td>
-<img src=юнго╢Кгп╠Ё╠Ёю╟╟За╓1.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EC%9D%B8%ED%95%98%EB%8C%80%ED%95%99%EA%B5%90%EA%B5%90%EC%9C%A1%EA%B3%BC%EC%A0%951.png?raw=true>
 </td>
 </tr>
 <tr>
 <td>
-<img src=юнго╢Кгп╠Ё╠Ёю╟╟За╓2.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EC%9D%B8%ED%95%98%EB%8C%80%ED%95%99%EA%B5%90%EA%B5%90%EC%9C%A1%EA%B3%BC%EC%A0%952.png?raw=true>
 </td>
 </tr>
 <tr>
 <td>
-<img src=юнго╢Кгп╠Ё╠Ёю╟╟За╓3.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EC%9D%B8%ED%95%98%EB%8C%80%ED%95%99%EA%B5%90%EA%B5%90%EC%9C%A1%EA%B3%BC%EC%A0%953.png?raw=true>
 </td>
 </tr>
 
