--- a/right3.html
+++ b/right3.html
@@ -10,37 +10,37 @@
 </td>
 <tr>
 <td>
-<img src=교과목개요2.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EA%B5%90%EA%B3%BC%EB%AA%A9%EA%B0%9C%EC%9A%942.png?raw=true>
 </tr>
 </td>
 <tr>
 <td>
-<img src=교과목개요3.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EA%B5%90%EA%B3%BC%EB%AA%A9%EA%B0%9C%EC%9A%943.png?raw=true>
 </tr>
 </td>
 <tr>
 <td>
-<img src=교과목개요4.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EA%B5%90%EA%B3%BC%EB%AA%A9%EA%B0%9C%EC%9A%944.png?raw=true>
 </tr>
 </td>
 <tr>
 <td>
-<img src=교과목개요5.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EA%B5%90%EA%B3%BC%EB%AA%A9%EA%B0%9C%EC%9A%945.png?raw=true>
 </tr>
 </td>
 <tr>
 <td>
-<img src=교과목개요6.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EA%B5%90%EA%B3%BC%EB%AA%A9%EA%B0%9C%EC%9A%946.png?raw=true>
 </tr>
 </td>
 <tr>
 <td>
-<img src=교과목개요7.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EA%B5%90%EA%B3%BC%EB%AA%A9%EA%B0%9C%EC%9A%947.png?raw=true>
 </tr>
 </td>
 <tr>
 <td>
-<img src=교과목개요8-1.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EA%B5%90%EA%B3%BC%EB%AA%A9%EA%B0%9C%EC%9A%958-1.png?raw=true>
 </tr>
 </td>
 </table>
