--- a/right4-1.html
+++ b/right4-1.html
@@ -1,9 +1,9 @@
 <html><head>
-<title>¿À¸¥ÂÊ1ÆäÀÌÁö
+<title>ì˜¤ë¥¸ìª½1íŽ˜ì´ì§€
 </title></head>
 <body>
 <table border=1>
-<img src=ÀÎÇÏ´ëÇÐ±³Àü°ø¼¼ºÎ¿µ¿ª.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EC%9D%B8%ED%95%98%EB%8C%80%ED%95%99%EA%B5%90%EC%A0%84%EA%B3%B5%EC%84%B8%EB%B6%80%EC%98%81%EC%97%AD.png?raw=true>
 
 </table>
 </body>
