--- a/right5.html
+++ b/right5.html
@@ -1,16 +1,16 @@
 <html><head>
-<title>¿À¸¥ÂÊ2ÆäÀÌÁö
+<title>ì˜¤ë¥¸ìª½2íŽ˜ì´ì§€
 </title></head>
 <body>
 <table border=1>
 <tr>
 <td>
-<img src=ÀÎÇÏ´ëÇÐ±³º¹¼öÀü°ø1.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EC%9D%B8%ED%95%98%EB%8C%80%ED%95%99%EA%B5%90%EB%B3%B5%EC%88%98%EC%A0%84%EA%B3%B51.png?raw=true
 </td>
 </tr>
 <tr>
 <td>
-<img src=ÀÎÇÏ´ëÇÐ±³º¹¼öÀü°ø2.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EC%9D%B8%ED%95%98%EB%8C%80%ED%95%99%EA%B5%90%EB%B3%B5%EC%88%98%EC%A0%84%EA%B3%B52.png?raw=true>
 </td>
 </tr>
 
