--- a/right6.html
+++ b/right6.html
@@ -1,16 +1,16 @@
 <html><head>
-<title>©ю╦╔бй2фДюлаЖ
+<title>Л≤╓К╔╦Л╙╫2М▌≤Л²╢Л╖─
 </title></head>
 <body>
 <table border=1>
 <tr>
 <td>
-<img src=юнго╢Кгп╠Ё╨нюЭ╟Ь1.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EC%9D%B8%ED%95%98%EB%8C%80%ED%95%99%EA%B5%90%EB%B6%80%EC%A0%84%EA%B3%B51.png?raw=true>
 </td>
 </tr>
 <tr>
 <td>
-<img src=юнго╢Кгп╠Ё╨нюЭ╟Ь2.png>
+<img src=https://github.com/leesh2427/21119-dongan-2019/blob/master/%EC%9D%B8%ED%95%98%EB%8C%80%ED%95%99%EA%B5%90%EB%B6%80%EC%A0%84%EA%B3%B52.png?raw=true>
 </td>
 </tr>
 
